--- a/FSAnalyser-Overview.html
+++ b/FSAnalyser-Overview.html
@@ -46,6 +46,12 @@
             opacity: 0.9;
         }
 
+        .header .attribution {
+            margin-top: 0.35rem;
+            font-size: 0.92rem;
+            opacity: 0.9;
+        }
+
         .header .badge {
             display: inline-block;
             margin-top: 1rem;
@@ -269,6 +275,7 @@
     <div class="header">
         <h1>FSAnalyser</h1>
         <div class="subtitle">Windows File Server Analysis & Inventory Tool</div>
+        <div class="attribution">Prepared by Steve Watson</div>
         <div class="badge">Read-Only &bull; Non-Destructive &bull; Single Application &bull; Runs Locally on Each Server
         </div>
     </div>
@@ -947,7 +954,8 @@
     </div>
 
     <footer>
-        FSAnalyser — File Server Analysis Tool &bull; Internal Use Only &bull; February 2026
+        FSAnalyser — File Server Analysis Tool &bull; Prepared by Steve Watson &bull; Internal Use Only &bull; February
+        2026
     </footer>
 
 </body>
