--- a/FSAnalyser-Overview.html
+++ b/FSAnalyser-Overview.html
@@ -954,8 +954,7 @@
     </div>
 
     <footer>
-        FSAnalyser — File Server Analysis Tool &bull; Prepared by Steve Watson &bull; Internal Use Only &bull; February
-        2026
+        FSAnalyser — File Server Analysis Tool &bull; Prepared by Steve Watson &bull; February 2026
     </footer>
 
 </body>
